--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".activity.MapActivity"></activity>
         <activity android:name=".activity.SettingActivity"></activity>
         <activity android:name=".activity.SaveActivity"></activity>
+        <activity android:name=".activity.UserInfoActivity"></activity>
         <service android:name=".service.AutoService"></service>
 
         <receiver android:name=".receiver.StartReceiver">
